# chip8

./: .gitignore  CMakeLists.txt  README.md
src/: compiler.cpp  compiler.hpp  emu.cpp  emu.hpp  main.cpp
tests/: test.cpp
